--- a/main.html
+++ b/main.html
@@ -1,16 +1,40 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <title>CSS Modal</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+
+<!-- Hidden checkbox -->
+<input type="checkbox" id="modal-toggle">
+
+<!-- Button -->
+<label for="modal-toggle">
+    <button id="openModal">Open Modal</button>
+</label>
+
+<!-- Modal -->
+<div class="modal">
+
+    <!-- Overlay click -->
+    <label for="modal-toggle" class="overlay"></label>
+
+    <div class="modal-content">
+
+        <div class="modal-header">
+            <h2>Modal Header</h2>
+            <label for="modal-toggle" class="close-modal">&times;</label>
+        </div>
+
+        <div class="modal-body">
+            <p>Modal Body Content</p>
+        </div>
+
+    </div>
+</div>
 
 </body>
-
 </html>
+
