--- a/main.html
+++ b/main.html
@@ -1,35 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>CSS Modal</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <title>CSS Modal</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
-  <!-- Hidden checkbox -->
-  <input type="checkbox" id="modal-toggle" hidden>
+<input type="checkbox" id="modal-toggle">
 
-  <!-- Open Modal Button -->
-  <label id="openModal" for="modal-toggle" class="open-btn">
+<button id="openModal" onclick="document.getElementById('modal-toggle').checked = true">
     Open Modal
-  </label>
+</button>
 
-  <!-- Modal (clicking outside closes it) -->
-  <label class="modal" for="modal-toggle">
-    <div class="modal-content" onclick="event.stopPropagation()">
+<div class="modal">
+    <div class="modal-content">
 
-      <div class="modal-header">
-        <h2>Modal Header</h2>
-        <label for="modal-toggle" class="close-modal">×</label>
-      </div>
+        <div class="modal-header">
+            <h2>Modal Header</h2>
+            <span class="close-modal" onclick="document.getElementById('modal-toggle').checked = false">
+                ×
+            </span>
+        </div>
 
-      <div class="modal-body">
-        <p>Modal Body Content</p>
-      </div>
+        <div class="modal-body">
+            <p>Modal Body Content</p>
+        </div>
 
     </div>
-  </label>
+</div>
 
 </body>
 </html>
